package edu.hitsz.observerPattern;

import edu.hitsz.basic.AbstractFlyingObject;

import java.util.List;

public interface Item {
   public void update(List<?>  list);
}
